<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_trip_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_edit_title"
                android:layout_gravity="center"

                android:textSize="20sp"
                android:layout_marginTop="30dp"
                />

            <ImageView
                android:id="@+id/view_trip_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                style="@style/separator_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/view_trip_type_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/trip_edit_type"
                    style="@style/trip_view_text_view_style"
                    />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/view_trip_destination_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/trip_edit_destination"
                    style="@style/trip_view_text_view_style"
                    />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                style="@style/separator_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/view_trip_start_date_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/trip_view_text_view_style"
                    android:text="13/13/2013"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    />

                <TextView
                    android:id="@+id/view_trip_end_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/trip_view_text_view_style"
                    android:text="13/13/2013"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                style="@style/separator_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_view_price"
                    android:layout_gravity="center"
                    style="@style/trip_view_text_view_style"
                    />

                <TextView
                    android:id="@+id/view_trip_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 500"
                    style="@style/trip_view_text_view_style"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                style="@style/separator_style"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_view_rating"
                    style="@style/trip_view_text_view_style"
                    />
                <RatingBar
                    android:id="@+id/trip_view_rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_trip_favorite_fab"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorDelete"
        app:maxImageSize="40dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/view_trip_edit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>